@@ -21,6 +21,9 @@ A bit-field of a `typedef` for an `enum` is now correctly forbidden in C:
     typedef enum E T
     explain T x : 4                     // error: enum bit-field is illegal
 
+** Reference to function or reference
+**cdecl** now correctly allows references to function and references.
+
 ** Reworked qualified array syntax
 C99 added the ability to qualify function parameters using array syntax, e.g.:
 
